frontend-configs/02-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: coursework
spec:
  selector:
    app: frontend
  type: ClusterIP  
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 80
