frontend-configs/03-frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: coursework
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: "frontend.localhost"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
